[package]
name = "pk-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
flume = "0.11.1"
logind-zbus = "5.1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uzers = "0.12.1"
zbus = { version = "5.3.0", features = ["tokio"] }
zvariant = "5.2.0"
gtk4 = { version = "0.9.5", features = ["v4_14"] }
gtk4-layer-shell = "0.4.0"
tokio-util = "0.7.13"
